--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- section skills -->
     <section class="s-hero-skills">
       <div class="container">
-        <div class="text-content-skills">
+        <div class="text-header-s-hero">
           <h2><span class="span-skills">Minhas</span> Habilidades</h2>
         </div>
 
@@ -76,50 +76,239 @@
             <img src="./assets/imgs/icons8-html-5.svg" alt="icon-html" />
             <h3>HTML</h3>
           </div>
-          <!-- card-html -->
+          <!-- card-css -->
           <div class="card-skills">
-            <img src="./assets/imgs/icons8-css.svg" alt="icon-html" />
+            <img src="./assets/imgs/icons8-css.svg" alt="icon-css" />
             <h3>CSS</h3>
           </div>
-          <!-- card-html -->
+          <!-- card-sass -->
           <div class="card-skills">
-            <img src="./assets/imgs/icons8-sass.svg" alt="icon-html" />
+            <img src="./assets/imgs/icons8-sass.svg" alt="icon-sass" />
             <h3>SASS</h3>
           </div>
-          <!-- card-html -->
+          <!-- card-js -->
           <div class="card-skills">
-            <img src="./assets/imgs/icons8-js.svg" alt="icon-html" />
+            <img src="./assets/imgs/icons8-js.svg" alt="icon-js" />
             <h3>JAVASCRIPT</h3>
           </div>
-          <!-- card-html -->
+          <!-- card-react -->
           <div class="card-skills">
-            <img src="./assets/imgs/icons8-react.svg" alt="icon-html" />
+            <img src="./assets/imgs/icons8-react.svg" alt="icon-react" />
             <h3>REACT</h3>
           </div>
-          <!-- card-html -->
+          <!-- card-next -->
           <div class="card-skills">
-            <img src="./assets/imgs/icons8-nextjs.svg" alt="icon-html" />
+            <img src="./assets/imgs/icons8-nextjs.svg" alt="icon-next" />
             <h3>NEXT</h3>
           </div>
-          <!-- card-html -->
+          <!-- card-git -->
           <div class="card-skills">
-            <img src="./assets/imgs/icons8-git.svg" alt="icon-html" />
+            <img src="./assets/imgs/icons8-git.svg" alt="icon-git" />
             <h3>GIT</h3>
           </div>
-          <!-- card-html -->
+          <!-- card-github -->
           <div class="card-skills">
-            <img src="./assets/imgs/icons8-github.svg" alt="icon-html" />
+            <img src="./assets/imgs/icons8-github.svg" alt="icon-github" />
             <h3>GITHUB</h3>
           </div>
-          <!-- card-html -->
+          <!-- card-figma -->
           <div class="card-skills">
-            <img src="./assets/imgs/icons8-figma.svg" alt="icon-html" />
+            <img src="./assets/imgs/icons8-figma.svg" alt="icon-figma" />
             <h3>FIGMA</h3>
           </div>
-          <!-- card-html -->
+          <!-- card-vscode -->
           <div class="card-skills">
-            <img src="./assets/imgs/icons8-visual-studio.svg" alt="icon-html" />
+            <img
+              src="./assets/imgs/icons8-visual-studio.svg"
+              alt="icon-vscode"
+            />
             <h3>VSCODE</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section experience -->
+    <section class="s-hero-experience">
+      <div class="container">
+        <div class="text-header-s-hero">
+          <h2><span class="span-skills">Minhas</span> Experiencias</h2>
+        </div>
+        <div class="wrapper-experience">
+          <!-- card-experience -->
+          <div class="card-experience card-primary">
+            <div class="box-content-experience">
+              <img
+                src="./assets/imgs/logo-fernando-front-end-white.svg"
+                alt="image-freelancer"
+              />
+              <h3>Desenvolvedor front end Freelancer</h3>
+              <h3>Nov-2024 - Atualmente</h3>
+            </div>
+            <p>
+              Buscando qualidade de vida melhor fiz uma transição de carreira
+              para área de programação que eu tanto sonhava e ainda continuo
+              estudando para ser melhor a cada projeto. <br />
+              Atualmente trabalho como Desenvolvedor Front-End Freelancer,
+              transformo projetos em interfaces web visuais com foco em técnicas
+              como pixel perfect, tornando o projeto o mais fiel possível ao
+              desenhado. Meu trabalho foca em criar experiências de usuário
+              intuitivas, melhorando a usabilidade e desempenho de sites e
+              aplicações web.
+            </p>
+          </div>
+
+          <!-- card-experience -->
+          <div class="card-experience card-secondary">
+            <div class="box-content-experience">
+              <img
+                src="./assets/imgs/image-grupojacto.png"
+                alt="image-freelancer"
+              />
+              <h3>Técnico Labotório Metrologia</h3>
+              <h3>Jan-2007 - Nov-2024</h3>
+            </div>
+            <p>
+              Ingressei na indústria transformadora de polímeros em 2007 atuando
+              em cargos como Montador, Inspetor de Qualidade e depois como
+              Metrologista 3D. <br />
+              Contruindo uma carreira sólida de 17 anos onde desenvolvi muitas
+              competencias tecnicas como GD&T e trabalhos de digitalização para
+              Engenharia Reversa, utilizando recursos matemáticos de softwares
+              como Polyworks, PC-Dimis, Geopak e equipamentos de scanner e
+              máquinas tridimensionais por toque a ótica e comportamentais que
+              meu moldaram muito principalmente no trabalho em equipe,
+              proatividade, espirito inovador.
+            </p>
+          </div>
+
+          <!-- card-experience -->
+          <div class="card-experience card-tertiary">
+            <div class="box-content-experience">
+              <img
+                src="./assets/imgs/image-serviços-gerais.png"
+                alt="image-freelancer"
+              />
+              <h3>Serviços Gerais</h3>
+              <h3>2004 - 2007</h3>
+            </div>
+            <p>
+              De 2004 á 2007 foram as minhas primeiras experiências
+              profissionais principalmente trabalhando como Montador e
+              Borracheiro, realizando serviços de consertos pneus, trocas e
+              serviços em gerais.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section about-me -->
+    <section class="s-hero-about">
+      <div class="container">
+        <div class="wrapper-about">
+          <img src="./assets/imgs/img-profile2.png" alt="image-profile" />
+          <div class="box-content-about">
+            <div class="header-about">
+              <h2><span class="span-skills">Sobre</span> Mim</h2>
+            </div>
+            <div class="text-content-about">
+              <h3>
+                Meu nome é Fernando Moreira da Silva Cristão, casado para sempre
+                com Isabele, Pai da Anthonella e da Yasmim, pai de dois Pet's o
+                Tyson é um Husky Siberiano travesso e da Dandara uma mestiça de
+                um Akita Inu com Labradora.
+              </h3>
+              <h3>
+                Sou Apaixondo por música, por tecnlógia, amo assistir filmes de
+                ação. Estudo desenvolvimento front-end desde 2022 e deste então
+                venho me desenvolvendo através de trabalhos informais
+                freelancers e desenvolvendo projetos pessoais.
+              </h3>
+              <h3>
+                Um dos meus muitos sonhos que tenho é me tornar um Engenheiro de
+                Software e minha carreira como dev front end já é o input para
+                alcançar o meu sonho. Dar uma vida melhor para minha familia e
+                conquistar tudo o que preciso para viver uma vida de qualidade!
+              </h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="s-hero-project">
+      <div class="container">
+        <div class="wrapper-project">
+          <div class="text-header-s-hero">
+            <h2><span class="span-skills">Meus</span> Projetos</h2>
+          </div>
+          <!-- project-1 -->
+          <div class="card-project">
+            <img src="./assets/imgs/projeto-em-breve.png" alt="" />
+            <div class="box-content-project">
+              <h1>01</h1>
+              <h3>Website MLX CAPITAL</h3>
+              <p>
+                Projeto freelancer frontend de um website de um cliente da
+                <a
+                  href="https://auclandesign.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Alclan Desegn
+                </a>
+                que fornece serviços de investimentos de capital na área da
+                saúde.
+              </p>
+              <img
+                src="./assets/imgs/icon-link-project.svg"
+                alt="icon-link-project"
+              />
+            </div>
+          </div>
+          <!-- project-2 -->
+          <div class="card-project">
+            <div class="box-content-project">
+              <h1>02</h1>
+              <h3>Website MLX CAPITAL</h3>
+              <p>
+                Projeto freelancer frontend de um website de um cliente da
+                <a
+                  href="https://auclandesign.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Alclan Desegn
+                </a>
+                que fornece serviços de investimentos de capital na área da
+                saúde.
+              </p>
+              <img
+                src="./assets/imgs/icon-link-project.svg"
+                alt="icon-link-project"
+              />
+            </div>
+            <img src="./assets/imgs/projeto-em-breve.png" alt="" />
+          </div>
+          <!-- project-3 -->
+          <div class="card-project">
+            <img src="./assets/imgs/projeto-em-breve.png" alt="" />
+            <div class="box-content-project">
+              <h1>03</h1>
+              <h3>Website MLX CAPITAL</h3>
+              <p>
+                Projeto freelancer frontend de um website de um cliente da
+                <a
+                  href="https://auclandesign.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Alclan Desegn
+                </a>
+                que fornece serviços de investimentos de capital na área da
+                saúde.
+              </p>
+              <img
+                src="./assets/imgs/icon-link-project.svg"
+                alt="icon-link-project"
+              />
+            </div>
           </div>
         </div>
       </div>
