--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <!-- section experience -->
     <section class="s-hero-experience">
       <div class="container">
-        <div class="text-header-s-hero">
+        <div class="text-header-s-hero sh-experience">
           <h2><span class="span-skills">Minhas</span> Experiencias</h2>
         </div>
         <div class="wrapper-experience">
