--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <img src="./assets/imgs/logo-fernando-front-end.svg" alt="logo" />
         <div class="header-nav-menu" id="nav-menu">
           <a href="#INICIO">Início</a>
-          <a href="#SOBRE">Sobre nós</a>
-          <a href="#SERVIÇOS">Nossos serviços</a>
-          <a href="#PORQUE-MLX">Porque a MLX?</a>
-          <a href="#CONTATO">Fale conosco</a>
+          <a href="#SOBRE">Habilidades</a>
+          <a href="#SERVIÇOS">Experiências</a>
+          <a href="#PORQUE-MLX">Sobre mim</a>
+          <a href="#CONTATO">Projetos</a>
         </div>
         <button class="button button-primary">Entrar em contato</button>
         <div class="menu-square" id="menu-toggle">
@@ -38,85 +38,97 @@
         <div class="wrapper-home">
           <div class="text-content-home">
             <h1>
-              <span class="span-home-h1">Olá eu sou</span>, Fernando Moreira.
+              <span class="span-home-h1">Olá eu sou,</span> Fernando Moreira.
             </h1>
-            <h2>Desenvolvedor <span class="span-home-h2">Front-END</span></h2>
+            <h2>Dev... <span class="span-home-h2">Front-END</span></h2>
           </div>
-          <div class="social-contact">
-            <img
-              id="logo-linkedin"
-              src="./assets/imgs/icons8-linkedin.svg"
-              alt="logo-linkedin"
-            />
-            <img id="logo-X" src="./assets/imgs/icon-X.png" alt="logo-X" />
-            <img
-              id="logo-instagram"
-              src="./assets/imgs/icons8-instagram.svg"
-              alt="logo-instagram"
-            />
-            <img
-              id="logo-whatsapp"
-              src="./assets/imgs/icons8-whatsapp.svg"
-              alt="logo-whatsapp"
-            />
-          </div>
+        </div>
+        <div class="wrapper-profile">
+          <img
+            class="img-profile"
+            src="./assets/imgs/img-profile.png"
+            alt="image-profile"
+          />
+          <!-- <img
+            class="vetor-profile"
+            src="./assets/imgs/vetor-rectangle.svg"
+            alt="vetor"
+          /> -->
+        </div>
+        <div class="social-contact">
+          <img
+            id="logo-linkedin"
+            src="./assets/imgs/icons8-linkedin.svg"
+            alt="logo-linkedin"
+          />
+          <img id="logo-X" src="./assets/imgs/icon-X.png" alt="logo-X" />
+          <img
+            id="logo-instagram"
+            src="./assets/imgs/icons8-instagram.svg"
+            alt="logo-instagram"
+          />
+          <img
+            id="logo-whatsapp"
+            src="./assets/imgs/icons8-whatsapp.svg"
+            alt="logo-whatsapp"
+          />
         </div>
       </div>
     </section>
     <!-- section skills -->
     <section class="s-hero-skills">
       <div class="container">
-        <div class="text-header-s-hero">
+        <div class="text-header-s-hero header-s-hero-black">
           <h2><span class="span-skills">Minhas</span> Habilidades</h2>
         </div>
 
-        <div class="wrapper-skills">
-          <!-- card-html -->
+        <div class="wrapper-colum1">
           <div class="card-skills">
             <img src="./assets/imgs/icons8-html-5.svg" alt="icon-html" />
             <h3>HTML</h3>
           </div>
-          <!-- card-css -->
+
           <div class="card-skills">
             <img src="./assets/imgs/icons8-css.svg" alt="icon-css" />
             <h3>CSS</h3>
           </div>
-          <!-- card-sass -->
+
           <div class="card-skills">
             <img src="./assets/imgs/icons8-sass.svg" alt="icon-sass" />
             <h3>SASS</h3>
           </div>
-          <!-- card-js -->
+
           <div class="card-skills">
             <img src="./assets/imgs/icons8-js.svg" alt="icon-js" />
             <h3>JAVASCRIPT</h3>
           </div>
-          <!-- card-react -->
+
           <div class="card-skills">
             <img src="./assets/imgs/icons8-react.svg" alt="icon-react" />
             <h3>REACT</h3>
           </div>
-          <!-- card-next -->
+          <!-- </div> -->
+          <!-- <div class="wrapper-colum2"> -->
           <div class="card-skills">
             <img src="./assets/imgs/icons8-nextjs.svg" alt="icon-next" />
             <h3>NEXT</h3>
           </div>
-          <!-- card-git -->
+
           <div class="card-skills">
             <img src="./assets/imgs/icons8-git.svg" alt="icon-git" />
             <h3>GIT</h3>
           </div>
-          <!-- card-github -->
+
           <div class="card-skills">
             <img src="./assets/imgs/icons8-github.svg" alt="icon-github" />
             <h3>GITHUB</h3>
           </div>
-          <!-- card-figma -->
+
           <div class="card-skills">
             <img src="./assets/imgs/icons8-figma.svg" alt="icon-figma" />
             <h3>FIGMA</h3>
           </div>
-          <!-- card-vscode -->
+
           <div class="card-skills">
             <img
               src="./assets/imgs/icons8-visual-studio.svg"
@@ -130,11 +142,10 @@
     <!-- section experience -->
     <section class="s-hero-experience">
       <div class="container">
-        <div class="text-header-s-hero sh-experience">
+        <div class="text-header-s-hero header-s-hero-gray">
           <h2><span class="span-skills">Minhas</span> Experiencias</h2>
         </div>
         <div class="wrapper-experience">
-          <!-- card-experience -->
           <div class="card-experience card-primary">
             <div class="box-content-experience">
               <img
@@ -157,7 +168,6 @@
             </p>
           </div>
 
-          <!-- card-experience -->
           <div class="card-experience card-secondary">
             <div class="box-content-experience">
               <img
@@ -181,7 +191,6 @@
             </p>
           </div>
 
-          <!-- card-experience -->
           <div class="card-experience card-tertiary">
             <div class="box-content-experience">
               <img
@@ -201,93 +210,184 @@
         </div>
       </div>
     </section>
+
     <!-- section about-me -->
     <section class="s-hero-about">
       <div class="container">
         <div class="wrapper-about">
-          <img src="./assets/imgs/img-profile2.png" alt="image-profile" />
+          <img src="./assets/imgs/img-profile-about.png" alt="image-profile" />
           <div class="box-content-about">
-            <div class="header-about">
+            <div class="header-about header-s-hero-black">
               <h2><span class="span-skills">Sobre</span> Mim</h2>
             </div>
             <div class="text-content-about">
               <h3>
-                Meu nome é Fernando Moreira da Silva Cristão, casado para sempre
-                com Isabele, Pai da Anthonella e da Yasmim, pai de dois Pet's o
-                Tyson é um Husky Siberiano travesso e da Dandara uma mestiça de
-                um Akita Inu com Labradora.
+                Meu nome é Fernando Moreira da Silva. Sou um desenvolvedor
+                front-end especializado em transformar designs em realidade
+                digital com uma precisão de Pixel Perfect, garantindo que cada
+                projeto reflita exatamente o conceito visual proposto. Meu
+                estilo de programação é influenciado pelo design minimalista,
+                onde a simplicidade e a funcionalidade são prioridades. Utilizo
+                HTML e CSS puros para criar interfaces limpas e intuitivas,
+                complementadas por automações em JavaScript que adicionam
+                interatividade sem comprometer a usabilidade.
               </h3>
               <h3>
-                Sou Apaixondo por música, por tecnlógia, amo assistir filmes de
-                ação. Estudo desenvolvimento front-end desde 2022 e deste então
-                venho me desenvolvendo através de trabalhos informais
-                freelancers e desenvolvendo projetos pessoais.
+                Estudando desenvolvimento front-end desde 2022, acumulei
+                experiência através de trabalhos freelancers e projetos
+                pessoais, sempre focando na qualidade e na eficácia do usuário
+                final. Meu objetivo profissional é evoluir para Engenheiro de
+                Software, utilizando minha carreira atual como um trampolim para
+                este sonho.
               </h3>
               <h3>
-                Um dos meus muitos sonhos que tenho é me tornar um Engenheiro de
-                Software e minha carreira como dev front end já é o input para
-                alcançar o meu sonho. Dar uma vida melhor para minha familia e
-                conquistar tudo o que preciso para viver uma vida de qualidade!
+                Fora do ambiente de trabalho, sou cristão, casado para sempre
+                com a Isabele, pai de duas filhas, Anthonella e Yasmim, além de
+                ser tutor de dois adoráveis pets, Tyson, um Husky Siberiano, e
+                Dandara, uma mestiça de Akita Inu com Labradora. Sou apaixonado
+                por música, tecnologia e filmes de ação. Meu compromisso é não
+                apenas com o desenvolvimento de software, mas também com o
+                aprimoramento constante para proporcionar uma vida melhor para
+                minha família, contribuindo para uma vida de qualidade e
+                realizações.
               </h3>
             </div>
           </div>
         </div>
+        <div class="image-breakpoint"></div>
       </div>
     </section>
 
     <section class="s-hero-project">
       <div class="container">
         <div class="wrapper-project">
-          <div class="text-header-s-hero">
+          <div class="text-header-s-hero header-s-hero-gray">
             <h2><span class="span-skills">Meus</span> Projetos</h2>
           </div>
-          <!-- project-1 -->
+
+          <div class="card-project">
+            <div class="box-content-project">
+              <h1>...</h1>
+              <h3>Meus projetos + relevantes...</h3>
+
+              <p>
+                Nesta seção, apresento uma coleção de projetos que refletem
+                minha jornada como desenvolvedor front-end, focando nas minhas
+                habilidades em pixel perfect e design minimalista. Cada um é
+                construído, demonstrando minha habilidade em criar interfaces
+                limpas e intuitivas.
+              </p>
+
+              <p>
+                Meus projetos não são apenas código; são soluções que buscam
+                resolver problemas reais, melhorar a vida digital das pessoas e
+                trazer beleza e utilidade para o espaço online. Explorando esta
+                seção, você verá como eu transformo ideias em realidade, sempre
+                com foco na usabilidade, acessibilidade e na arte do design web.
+              </p>
+
+              <p>
+                Cada projeto é uma peça do meu crescimento contínuo como
+                desenvolvedor e um convite para você entender como posso
+                contribuir para o seu próximo desafio tecnológico.
+              </p>
+            </div>
+          </div>
+
           <div class="card-project">
             <img src="./assets/imgs/projeto-em-breve.png" alt="" />
             <div class="box-content-project">
               <h1>01</h1>
               <h3>Website MLX CAPITAL</h3>
               <p>
-                Projeto freelancer frontend de um website de um cliente da
+                Projeto Confidencial. Ainda não pode ser divulgado o link do
+                projeto no entanto é um projeto freelancer frontend de um
+                website de um cliente da
                 <a
+                  id="link-auclan-design"
                   href="https://auclandesign.com/"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >Alclan Desegn
-                </a>
+                >
+                  <img
+                    src="./assets/imgs/img-auclan-design.png"
+                    alt="logo-auclan-design"
+                  />AUCLAN DESIGN</a
+                >
                 que fornece serviços de investimentos de capital na área da
                 saúde.
               </p>
-              <img
-                src="./assets/imgs/icon-link-project.svg"
-                alt="icon-link-project"
-              />
+
+              <p>
+                Um projeto desenvolvido em html e css puro com algumas
+                automações em javascript usando conceitos de pixel perfect e
+                design minimalista.
+              </p>
+
+              <p>
+                Pixel Perfect refere-se à prática de criar um design que
+                corresponde exatamente ao mockup ou ao design original, pixel
+                por pixel. Isso é especialmente importante para designers e
+                desenvolvedores que querem assegurar que o produto final na web
+                seja uma réplica fiel do design conceitual. Este conceito pode
+                envolver o uso de grid systems, unidades relativas como rem , e
+                ferramentas de design para comparar o site com o mockup
+              </p>
+              <p>
+                O design minimalista foca na simplicidade e na funcionalidade.
+                Este estilo geralmente utiliza uma paleta de cores limitada,
+                tipografia clara e funcional, espaços em branco (white space)
+                para criar foco no conteúdo principal, e evita elementos
+                desnecessários. A ideia é que "menos é mais", proporcionando uma
+                experiência visual limpa e direta.
+              </p>
+              <a
+                href="https://feryamaha.github.io/MLX-2025/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./assets/imgs/icon-link-project.svg"
+                  alt="icon-link-project"
+              /></a>
             </div>
           </div>
-          <!-- project-2 -->
+
           <div class="card-project">
             <div class="box-content-project">
               <h1>02</h1>
-              <h3>Website MLX CAPITAL</h3>
+              <h3>Website ALPHA Otdr's</h3>
               <p>
-                Projeto freelancer frontend de um website de um cliente da
+                Projeto Confidencial. Ainda não pode ser divulgado o link do
+                projeto no entanto é um projeto freelancer frontend de um
+                website de um cliente da
                 <a
+                  id="link-auclan-design"
                   href="https://auclandesign.com/"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >Alclan Desegn
-                </a>
-                que fornece serviços de investimentos de capital na área da
-                saúde.
+                >
+                  <img
+                    src="./assets/imgs/img-auclan-design.png"
+                    alt="logo-auclan-design"
+                  />AUCLAN DESIGN</a
+                >
+                que fornece serviços de Aluguel e manutenção de máquinas de
+                fusão de fibra óptica e OTDR’s
               </p>
-              <img
-                src="./assets/imgs/icon-link-project.svg"
-                alt="icon-link-project"
-              />
+              <a
+                href="https://github.com/feryamaha/ALPHA-2025"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./assets/imgs/icon-link-project.svg"
+                  alt="icon-link-project"
+              /></a>
             </div>
             <img src="./assets/imgs/projeto-em-breve.png" alt="" />
           </div>
-          <!-- project-3 -->
+
           <div class="card-project">
             <img src="./assets/imgs/projeto-em-breve.png" alt="" />
             <div class="box-content-project">
@@ -296,22 +396,61 @@
               <p>
                 Projeto freelancer frontend de um website de um cliente da
                 <a
+                  id="link-auclan-design"
                   href="https://auclandesign.com/"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >Alclan Desegn
-                </a>
+                >
+                  <img
+                    src="./assets/imgs/img-auclan-design.png"
+                    alt="logo-auclan-design"
+                  />AUCLAN DESIGN</a
+                >
                 que fornece serviços de investimentos de capital na área da
                 saúde.
               </p>
-              <img
-                src="./assets/imgs/icon-link-project.svg"
-                alt="icon-link-project"
-              />
+              <a
+                href="https://feryamaha.github.io/MLX-2025/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./assets/imgs/icon-link-project.svg"
+                  alt="icon-link-project"
+              /></a>
             </div>
           </div>
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="wrapper-footer">
+          <img
+            class="logo-footer"
+            src="./assets/imgs/logo-fernando-front-end-white.svg"
+            alt="logo-fernando"
+          />
+          <div class="social-footer">
+            <img
+              id="logo-linkedin"
+              src="./assets/imgs/icons8-linkedin.svg"
+              alt="logo-linkedin"
+            />
+            <img id="logo-X" src="./assets/imgs/icons8-x.svg" alt="logo-X" />
+            <img
+              id="logo-instagram"
+              src="./assets/imgs/icons8-instagram.svg"
+              alt="logo-instagram"
+            />
+            <img
+              id="logo-whatsapp"
+              src="./assets/imgs/icons8-whatsapp.svg"
+              alt="logo-whatsapp"
+            />
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
